[package]
name = "block_blast_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"  # Enables Rust to work with WebAssembly
serde = { version = "1.0", features = ["derive"] }  # (Optional) for handling JSON
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["Document", "Element", "HtmlInputElement", "Window"]  # Browser API
